--- a/Tangra 3/app.config
+++ b/Tangra 3/app.config
@@ -1,9 +1,9 @@
 <?xml version="1.0"?>
 <configuration>
 	<startup>
-		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0,Profile=Mono"/>
-	</startup>
+		
+	<supportedRuntime version="v2.0.50727"/></startup>
 
-	<dllmap dll="TangraVideo" target="TangraVideo.dylib" />
-	<dllmap dll="TangraCore" target="TangraCore.dylib" />
+	<dllmap dll="TangraVideo" target="TangraVideo.dylib"/>
+	<dllmap dll="TangraCore" target="TangraCore.dylib"/>
 </configuration>
