--- a/Tangra.Video/Windows/Tangra.Video.vcxproj.filters
+++ b/Tangra.Video/Windows/Tangra.Video.vcxproj.filters
@@ -35,6 +35,9 @@
     <ClInclude Include="stdafx.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="TangraDirectShow.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp">
@@ -47,6 +50,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="stdafx.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="TangraDirectShow.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
