--- a/Tangra.Video/Mac/TangraVideo_OSX.project
+++ b/Tangra.Video/Mac/TangraVideo_OSX.project
@@ -1,8 +1,8 @@
-<?xml version="1.0" encoding="utf-8"?>
-<CodeLite_Project Name="TangraVideo_Linux" InternalType="Library">
+<?xml version="1.0" encoding="UTF-8"?>
+<CodeLite_Project Name="TangraVideo_OSX" InternalType="Library">
   <Plugins>
     <Plugin Name="qmake">
-      <![CDATA[00020001N0005Debug0000000000000001N0007Release000000000000]]>
+      <![CDATA[00010001N0005Debug000000000000]]>
     </Plugin>
   </Plugins>
   <Description/>
@@ -11,8 +11,8 @@
     <File Name="TangraVideo.cpp"/>
   </VirtualDirectory>
   <VirtualDirectory Name="include">
-    <File Name="include/TangraCore.h"/>
     <File Name="TangraVideo.h"/>
+    <File Name="include/TangraCore.h"/>
     <File Name="WindowsTypes.h"/>
   </VirtualDirectory>
   <Settings Type="Dynamic Library">
@@ -26,15 +26,15 @@
       <ResourceCompiler Options=""/>
     </GlobalSettings>
     <Configuration Name="Debug" CompilerType="gnu g++" DebuggerType="GNU gdb debugger" Type="Dynamic Library" BuildCmpWithGlobalSettings="append" BuildLnkWithGlobalSettings="append" BuildResWithGlobalSettings="append">
-      <Compiler Options="-g" C_Options="-g" Required="yes" PreCompiledHeader="" PCHInCommandLine="no" UseDifferentPCHFlags="no" PCHFlags="">
+      <Compiler Options="-g -m32 -arch i386" C_Options="-g -m32 -arch i386" Required="yes" PreCompiledHeader="" PCHInCommandLine="no" UseDifferentPCHFlags="no" PCHFlags="">
         <IncludePath Value="."/>
       </Compiler>
-      <Linker Options="" Required="yes">
+      <Linker Options="-arch i386" Required="yes">
         <LibraryPath Value="./lib"/>
         <Library Value="TangraCore"/>
       </Linker>
       <ResourceCompiler Options="" Required="no"/>
-      <General OutputFile="$(IntermediateDirectory)/libTangraVideo.so" IntermediateDirectory="./Debug" Command="" CommandArguments="" UseSeparateDebugArgs="no" DebugArguments="" WorkingDirectory="$(IntermediateDirectory)" PauseExecWhenProcTerminates="yes"/>
+      <General OutputFile="$(IntermediateDirectory)/libTangraVideo.dylib" IntermediateDirectory="./Debug" Command="" CommandArguments="" UseSeparateDebugArgs="no" DebugArguments="" WorkingDirectory="$(IntermediateDirectory)" PauseExecWhenProcTerminates="yes"/>
       <Environment EnvVarSetName="&lt;Use Defaults&gt;" DbgSetName="&lt;Use Defaults&gt;">
         <![CDATA[]]>
       </Environment>
@@ -42,14 +42,8 @@
         <PostConnectCommands/>
         <StartupCommands/>
       </Debugger>
-      <PreBuild>
-        <Command Enabled="yes">rm -f lib/libTangraCore.so</Command>
-        <Command Enabled="yes">cp ../../Tangra.Core/Debug/libTangraCore.so lib/</Command>
-      </PreBuild>
-      <PostBuild>
-        <Command Enabled="yes">rm -f ../../Tangra\ 3/bin/Debug/libTangraVideo.so</Command>
-        <Command Enabled="yes">cp Debug/libTangraVideo.so ../../Tangra\ 3/bin/Debug/</Command>
-      </PostBuild>
+      <PreBuild/>
+      <PostBuild/>
       <CustomBuild Enabled="no">
         <RebuildCommand/>
         <CleanCommand/>
@@ -57,7 +51,7 @@
         <PreprocessFileCommand/>
         <SingleFileCommand/>
         <MakefileGenerationCommand/>
-        <ThirdPartyToolName/>
+        <ThirdPartyToolName>None</ThirdPartyToolName>
         <WorkingDirectory/>
       </CustomBuild>
       <AdditionalRules>
@@ -71,13 +65,13 @@
         <SearchPaths/>
       </Completion>
     </Configuration>
-    <Configuration Name="Release" CompilerType="gnu g++" DebuggerType="GNU gdb debugger" Type="Dynamic Library" BuildCmpWithGlobalSettings="append" BuildLnkWithGlobalSettings="append" BuildResWithGlobalSettings="append">
+    <Configuration Name="Release" CompilerType="gnu g++" DebuggerType="GNU gdb debugger" Type="" BuildCmpWithGlobalSettings="append" BuildLnkWithGlobalSettings="append" BuildResWithGlobalSettings="append">
       <Compiler Options="" C_Options="" Required="yes" PreCompiledHeader="" PCHInCommandLine="no" UseDifferentPCHFlags="no" PCHFlags="">
         <IncludePath Value="."/>
       </Compiler>
       <Linker Options="-O2" Required="yes"/>
       <ResourceCompiler Options="" Required="no"/>
-      <General OutputFile="$(IntermediateDirectory)/libTangraVideo.so" IntermediateDirectory="./Release" Command="" CommandArguments="" UseSeparateDebugArgs="no" DebugArguments="" WorkingDirectory="$(IntermediateDirectory)" PauseExecWhenProcTerminates="yes"/>
+      <General OutputFile="$(IntermediateDirectory)/$(ProjectName).so" IntermediateDirectory="./Release" Command="" CommandArguments="" UseSeparateDebugArgs="no" DebugArguments="" WorkingDirectory="$(IntermediateDirectory)" PauseExecWhenProcTerminates="yes"/>
       <Environment EnvVarSetName="&lt;Use Defaults&gt;" DbgSetName="&lt;Use Defaults&gt;">
         <![CDATA[]]>
       </Environment>
@@ -85,14 +79,8 @@
         <PostConnectCommands/>
         <StartupCommands/>
       </Debugger>
-      <PreBuild>
-        <Command Enabled="yes">rm -f lib/libTangraCore.so</Command>
-        <Command Enabled="yes">cp ../../Tangra.Core/Release/libTangraCore.so lib/</Command>
-      </PreBuild>
-      <PostBuild>
-        <Command Enabled="yes">rm -f ../../Tangra\ 3/bin/Release/libTangraVideo.so</Command>
-        <Command Enabled="yes">cp Release/libTangraVideo.so ../../Tangra\ 3/bin/Release/</Command>
-      </PostBuild>
+      <PreBuild/>
+      <PostBuild/>
       <CustomBuild Enabled="no">
         <RebuildCommand/>
         <CleanCommand/>
